<resources>
    <!-- common -->
    <string name="app_name">LifeAssistant</string>
    <string name="drawer_open">開啟</string>
    <string name="drawer_close">關閉</string>
    <string name="open_gov_data">政府資料開放平臺</string>
    <string name="data_null">無</string>
    <string name="actionbar_menu_refresh">更新資料</string>
    <string name="actionbar_menu_description">說明</string>

    <!-- drawer -->
    <string name="drawer_home">首頁</string>
    <string name="drawer_weather">天氣預報</string>
    <string name="drawer_air">空氣品質</string>
    <string name="drawer_setting">設定</string>

    <!-- setting -->
    <string name="setting_weather">天氣預報的位置</string>
    <string name="setting_air">空氣品質的位置</string>

    <!-- Home -->
    <string name="home_title_air">空氣品質</string>
    <string name="home_title_weather">天氣預報</string>
    <string name="home_temp">溫度：</string>
    <string name="home_rain">降雨：</string>
    <string name="home_description">描述：</string>
    <string name="home_feel">體感：</string>
    <string name="home_time">時間：</string>
    <string name="home_time_symbol">~</string>
    <string name="home_location">觀測站位置：</string>
    <string name="home_pollutant">污染指標物：</string>
    <string name="home_pm25">PM2.5濃度：</string>
    <string name="home_status">空氣的狀態：</string>
    <string name="home_influence">影響：</string>
    <string name="home_suggestion">建議：</string>
    <string name="home_monitor_time">監測時間：</string>
    <string name="home_snack_no_network">找不到網路，請連線再試試看！</string>
    <string name="home_snack_msg">找不到任何資料，請問要呼叫資料嗎?</string>
    <string name="home_snack_failure">資料在路上迷路了，請問要重新呼叫嗎?</string>
    <string name="home_snack_action">確認</string>

    <!-- Weather item -->
    <string name="weather_item_temp">溫度：</string>
    <string name="weather_item_rain">降雨：</string>
    <string name="weather_item_description">描述：</string>
    <string name="weather_item_feel">體感舒適度：</string>
    <string name="weather_item_time">更新時間：</string>

    <!-- list_item_air -->
    <string name="air_country">縣市位置：</string>
    <string name="air_site">監測位置：</string>
    <string name="air_status">空氣狀態：</string>
    <string name="air_time">監測時間：</string>

    <!-- Air Dialog -->
    <string name="air_dialog_confirm">OK</string>
    <string name="air_dialog_location">觀測站位置：</string>
    <string name="air_dialog_pollutant">污染指標物：</string>
    <string name="air_dialog_aqi">AQI 指數：</string>
    <string name="air_dialog_influence">影響：</string>
    <string name="air_dialog_suggestion">建議：</string>

    <!-- Refresh Dialog -->
    <string name="refresh_dialog_title">更新資料</string>
    <string name="refresh_dialog_content">請問是否要更新資料?</string>
    <string name="refresh_dialog_confirm">確認</string>
    <string name="refresh_dialog_cancel">取消</string>

    <!-- Explanation Dialog -->
    <string name="explanation_dialog_title">說明</string>
    <string name="explanation_dialog_content">本APP主要功能為提供查詢天氣預報與空氣品質，主要資料皆來自【政府資料開放平臺】，使用了下列的資料集：\n1. 一般天氣預報-今明36小時天氣預報\n2. 空氣品質指標(AQI)\n\n開發者：Kai,Wen-Chen</string>
    <string name="explanation_dialog_confirm">確認</string>

    <!-- Weather Location -->
    <string-array name="weather_location">
        <item>臺北市</item>
        <item>新北市</item>
        <item>桃園市</item>
        <item>臺中市</item>
        <item>臺南市</item>
        <item>高雄市</item>
        <item>基隆市</item>
        <item>新竹縣</item>
        <item>新竹市</item>
        <item>苗栗縣</item>
        <item>彰化縣</item>
        <item>南投縣</item>
        <item>雲林縣</item>
        <item>嘉義縣</item>
        <item>嘉義市</item>
        <item>屏東縣</item>
        <item>宜蘭縣</item>
        <item>花蓮縣</item>
        <item>臺東縣</item>
        <item>澎湖縣</item>
        <item>金門縣</item>
        <item>連江縣</item>
    </string-array>

    <!-- Air Location -->
    <string-array name="air_location">
        <item>臺北市 陽明</item>
        <item>臺北市 士林</item>
        <item>臺北市 松山</item>
        <item>臺北市 中山</item>
        <item>臺北市 萬華</item>
        <item>臺北市 古亭</item>
        <item>臺北市 大同</item>
        <item>新北市 富貴角</item>
        <item>新北市 淡水</item>
        <item>新北市 萬里</item>
        <item>新北市 汐止</item>
        <item>新北市 三重</item>
        <item>新北市 永和</item>
        <item>新北市 新店</item>
        <item>新北市 土城</item>
        <item>新北市 板橋</item>
        <item>新北市 新莊</item>
        <item>新北市 菜寮</item>
        <item>新北市 林口</item>
        <item>基隆市 基隆</item>
        <item>宜蘭縣 宜蘭</item>
        <item>宜蘭縣 冬山</item>
        <item>花蓮縣 花蓮</item>
        <item>臺東縣 臺東</item>
        <item>臺東縣 關山</item>
        <item>桃園市 桃園</item>
        <item>桃園市 大園</item>
        <item>桃園市 觀音</item>
        <item>桃園市 平鎮</item>
        <item>桃園市 中壢</item>
        <item>桃園市 龍潭</item>
        <item>新竹縣 湖口</item>
        <item>新竹縣 竹東</item>
        <item>新竹市 新竹</item>
        <item>苗栗縣 頭份</item>
        <item>苗栗縣 苗栗</item>
        <item>苗栗縣 三義</item>
        <item>臺中市 豐原</item>
        <item>臺中市 沙鹿</item>
        <item>臺中市 大里</item>
        <item>臺中市 忠明</item>
        <item>臺中市 西屯</item>
        <item>彰化縣 彰化</item>
        <item>彰化縣 彰化(大城)</item>
        <item>彰化縣 線西</item>
        <item>彰化縣 二林</item>
        <item>南投縣 南投</item>
        <item>南投縣 竹山</item>
        <item>南投縣 埔里</item>
        <item>雲林縣 臺西</item>
        <item>雲林縣 斗六</item>
        <item>雲林縣 崙背</item>
        <item>雲林縣 麥寮</item>
        <item>嘉義縣 新港</item>
        <item>嘉義縣 朴子</item>
        <item>嘉義市 嘉義</item>
        <item>臺南市 新營</item>
        <item>臺南市 安南</item>
        <item>臺南市 善化</item>
        <item>臺南市 臺南</item>
        <item>臺南市 臺南(玉井)</item>
        <item>高雄市 復興</item>
        <item>高雄市 美濃</item>
        <item>高雄市 橋頭</item>
        <item>高雄市 仁武</item>
        <item>高雄市 鳳山</item>
        <item>高雄市 大寮</item>
        <item>高雄市 林園</item>
        <item>高雄市 楠梓</item>
        <item>高雄市 左營</item>
        <item>高雄市 前金</item>
        <item>高雄市 前鎮</item>
        <item>高雄市 小港</item>
        <item>屏東縣 屏東</item>
        <item>屏東縣 潮州</item>
        <item>屏東縣 恆春</item>
        <item>屏東縣 屏東(琉球)</item>
        <item>金門縣 金門</item>
        <item>連江縣 馬祖</item>
        <item>澎湖縣 馬公</item>
    </string-array>

    <!-- AQI influences -->
    <string name="aqi_influence_good">空氣品質為良好，污染程度低或無污染。</string>
    <string name="aqi_influence_normal">空氣品質普通；但對非常少數之極敏感族群產生輕微影響。</string>
    <string name="aqi_influence_maybe_bad">空氣污染物可能會對敏感族群的健康造成影響，但是對一般大眾的影響不明顯。</string>
    <string name="aqi_influence_bad">對所有人的健康開始產生影響，對於敏感族群可能產生較嚴重的健康影響。</string>
    <string name="aqi_influence_very_bad">健康警報：所有人都可能產生較嚴重的健康影響。</string>
    <string name="aqi_influence_danger">健康威脅達到緊急，所有人都可能受到影響。</string>

    <!-- AQI general suggestions -->
    <string name="aqi_general_suggestion_good">正常戶外活動。	</string>
    <string name="aqi_general_suggestion_normal">正常戶外活動。</string>
    <string name="aqi_general_suggestion_maybe_bad">1.一般民眾如果有不適，如眼痛，咳嗽或喉嚨痛等，應該考慮減少戶外活動。\n2.學生仍可進行戶外活動，但建議減少長時間劇烈運動。</string>
    <string name="aqi_general_suggestion_bad">1.一般民眾如果有不適，如眼痛，咳嗽或喉嚨痛等，應減少體力消耗，特別是減少戶外活動。\n2.學生應避免長時間劇烈運動，進行其他戶外活動時應增加休息時間。</string>
    <string name="aqi_general_suggestion_very_bad">1.一般民眾應減少戶外活動。\n2.學生應立即停止戶外活動，並將課程調整於室內進行。</string>
    <string name="aqi_general_suggestion_danger">1.一般民眾應避免戶外活動，室內應緊閉門窗，必要外出應配戴口罩等防護用具。\n2.學生應立即停止戶外活動，並將課程調整於室內進行。</string>

    <!-- AQI sensitive suggestions -->
    <string name="aqi_sensitive_suggestion_good">正常戶外活動。	</string>
    <string name="aqi_sensitive_suggestion_normal">極特殊敏感族群建議注意可能產生的咳嗽或呼吸急促症狀，但仍可正常戶外活動。</string>
    <string name="aqi_sensitive_suggestion_maybe_bad">1.有心臟、呼吸道及心血管疾病患者、孩童及老年人，建議減少體力消耗活動及戶外活動，必要外出應配戴口罩。\n2.具有氣喘的人可能需增加使用吸入劑的頻率。</string>
    <string name="aqi_sensitive_suggestion_bad">1.有心臟、呼吸道及心血管疾病患者、孩童及老年人，建議留在室內並減少體力消耗活動，必要外出應配戴口罩。\n2.具有氣喘的人可能需增加使用吸入劑的頻率。</string>
    <string name="aqi_sensitive_suggestion_very_bad">1.有心臟、呼吸道及心血管疾病患者、孩童及老年人應留在室內並減少體力消耗活動，必要外出應配戴口罩。\n2.具有氣喘的人應增加使用吸入劑的頻率。</string>
    <string name="aqi_sensitive_suggestion_danger">1.有心臟、呼吸道及心血管疾病患者、孩童及老年人應留在室內並避免體力消耗活動，必要外出應配戴口罩。\n2.具有氣喘的人應增加使用吸入劑的頻率。</string>
</resources>
