<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:checked="true"
            android:icon="@drawable/icon_home"
            android:title="@string/drawer_home" />

        <item
            android:id="@+id/action_weather"
            android:icon="@drawable/icon_weather"
            android:title="@string/drawer_weather" />

        <item
            android:id="@+id/action_air"
            android:icon="@drawable/icon_factory"
            android:title="@string/drawer_air" />

        <item
            android:id="@+id/action_setting"
            android:icon="@drawable/icon_setting"
            android:title="@string/drawer_setting" />
    </group>

</menu>