<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/refresh_dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorLevelException"
        android:gravity="center"
        android:text="@string/refresh_dialog_title"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/refresh_dialog_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/refresh_dialog_content"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refresh_dialog_title" />

    <Button
        android:id="@+id/refresh_dialog_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#00000000"
        android:text="@string/refresh_dialog_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refresh_dialog_content" />

    <Button
        android:id="@+id/refresh_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="#00000000"
        android:text="@string/refresh_dialog_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/refresh_dialog_confirm"
        app:layout_constraintEnd_toStartOf="@+id/refresh_dialog_confirm" />
</android.support.constraint.ConstraintLayout>