<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/air_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/air_aqi_text"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/shape_circle_textview"
            android:gravity="center"
            android:text="100"
            android:textSize="36sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/air_country_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/air_country"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            card_view:layout_constraintStart_toEndOf="@+id/air_aqi_text"
            card_view:layout_constraintTop_toTopOf="@+id/air_aqi_text" />

        <TextView
            android:id="@+id/air_site_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/air_site"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            card_view:layout_constraintBottom_toTopOf="@+id/air_time_title"
            card_view:layout_constraintStart_toStartOf="@+id/air_country_title"
            card_view:layout_constraintTop_toBottomOf="@+id/air_country_title" />

        <TextView
            android:id="@+id/air_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_time"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/air_aqi_text"
            card_view:layout_constraintStart_toStartOf="@+id/air_site_title" />

        <TextView
            android:id="@+id/air_country_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            card_view:layout_constraintStart_toEndOf="@+id/air_country_title"
            card_view:layout_constraintTop_toTopOf="@+id/air_country_title" />

        <TextView
            android:id="@+id/air_site_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            card_view:layout_constraintStart_toEndOf="@+id/air_site_title"
            card_view:layout_constraintTop_toTopOf="@+id/air_site_title" />

        <TextView
            android:id="@+id/air_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            card_view:layout_constraintStart_toEndOf="@+id/air_time_title"
            card_view:layout_constraintTop_toTopOf="@+id/air_time_title" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>